--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: python # => 1
     python: # => 2
-      - "2.6"
-      - "2.7"
+      - "3.6"
     services: # => 3
       - sqlite3
     env: # => 4
-      -DJANGO=1.8 DB=sqlite3
+      -DJANGO=2.0 DB=sqlite3
     install: # => 5
-    #   - pip install -r requirements.txt
-    before_script: # => 6
-    #   - mysql -e 'create database test;' -u root
+      - pip install -r requirements.txt
     script: # => 7
       - python manage.py test
