try to cleanup travis config file 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ python: # => 2
   - "3.6"
 services: # => 3
   - sqlite3
+install:
+  - pip install -r requirements.txt
+  - pip install -q Django==2.0
 env: # => 4
   -DJANGO=2.0 DB=sqlite3
 script: # => 7
